# metapartition

./: .gitignore  Cargo.toml  Makefile  README.md
benches/: 4.4.fix  4.4.fix.reverse  4.4.hgr  fs-save000.fix  fs-save000.fix.reverse  fs-save000.hgr.part.2  small.fix  small.fix.reverse  small.hgr
src/: hypergraph.rs  lib.rs  main.rs  metapartitioner.rs
