[package]
name = "metapartition"
version = "0.1.0"
edition = "2021"

[features]
default = ["kahypar"]
hmetis = ["dep:hmetis_r"]
kahypar = ["dep:kahypar_r"]
mtkahypar = ["dep:mtkahypar_r"]

[dependencies]
kahypar_r = { optional = true, git = "https://github.com/profmadden/kahypar_r" }
hmetis_r =  {optional = true, git = "https://github.com/profmadden/hmetis_r"}
# mtkahypar_r = {optional = true, path = "../mtkahypar_r"}
mtkahypar_r = {optional = true, git = "https://github.com/profmadden/mtkahypar_r"}

lineio = {git = "https://github.com/profmadden/lineio"}

argh = "0.1.13"
