[package]
name = "metapartition"
version = "0.1.0"
edition = "2021"
default-run = "metapartition"

[features]
default = ["kahypar"]
hmetis = ["dep:hmetis_r"]
kahypar = ["dep:kahypar_r"]
mtkahypar = ["dep:mtkahypar_r"]

[dependencies]
hypergraph = { git = "https://github.com/profmadden/hypergraph_bu", package="hypergraph_bu"}
kahypar_r = { optional = true, git = "https://github.com/profmadden/kahypar_r" }
# kahypar_r = { optional = true, path = "../kahypar_r" }
hmetis_r =  {optional = true, git = "https://github.com/profmadden/hmetis_r"}
# mtkahypar_r = {optional = true, path = "../mtkahypar_r"}
mtkahypar_r = {optional = true, git = "https://github.com/profmadden/mtkahypar_r"}

# lineio = {git = "https://github.com/profmadden/lineio"}

argh = "0.1.13"
lineio = "0.1.1"
